// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFetcher connect() should throw if endpoint provider is missing 1`] = `"Invalid context. Did you forget to wrap the withFetcher(...) in a EndpointProvider?"`;

exports[`withFetcher should render nothing if there is an error and FailureComponent is null 1`] = `""`;

exports[`withFetcher should show custom FailureComponent if there is an error 1`] = `
<MockedFailureComponent
  error="Yepp... Error time! Wushhh!"
/>
`;

exports[`withFetcher should show default Failure if there is an error 1`] = `
<Translate(Failure)
  error="Yepp... Error time! Wushhh!"
/>
`;

exports[`withFetcher should show nothing if there is no data yet and spinner is hidden 1`] = `<div />`;

exports[`withFetcher should show spinner if there is no data yet and it's not hidden 1`] = `
<Spinner
  className="loading"
  fadeIn="full"
  name="line-scale-party"
  noFadeIn={false}
  overrideSpinnerClassName=""
/>
`;

exports[`withFetcher should show wrapped component if there is data 1`] = `
<WrappedComponent
  endpoint={Object {}}
/>
`;

exports[`withFetcher should throw error if there is no getEndpoint function 1`] = `"Invalid context. Did you forget to wrap the withFetcher(...) in a EndpointProvider?"`;
